--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <body>
 
+    <h1 class="text-center">All Post</h1>
+
+    <div id="all-posts" class="row row-cols-1 row-cols-md-3 g-4">
+    </div>
 
     <script src="./script.js"></script>
 </body>
