--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
     <!--Bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <style>
+        h6 {
+            text-align: center;
+            background-color: aliceblue;
+            display: block;
+            margin: 50px;
+        }
+    </style>
 </head>
 
 <body>
 
-    <h1 class="text-center">All Post</h1>
+
+
+    <h1 class="text-center">Comments</h1>
+    <div id="comment">
+
+    </div>
 
     <div id="all-posts" class="row row-cols-1 row-cols-md-3 g-4">
     </div>
